crates/gridlook-cdl/tests/snapshots/cdl_snapshots__simple_nc.snap
---
source: crates/gridlook-cdl/tests/cdl_snapshots.rs
expression: "header(\"simple.nc\")"
---
netcdf simple {
dimensions:
	time = 4 ;
	x = 3 ;
	y = 2 ;
variables:
	float temperature(time, x, y) ;
		temperature:_FillValue = NaNf ;
		temperature:units = "degC" ;
		temperature:long_name = "Sea Water Temperature" ;
	float salinity(time, x, y) ;
		salinity:_FillValue = NaNf ;
		salinity:units = "psu" ;
		salinity:long_name = "Sea Water Salinity" ;
	int64 time(time) ;
		time:units = "days since 2024-01-01 00:00:00" ;
		time:calendar = "proleptic_gregorian" ;
	float x(x) ;
		x:_FillValue = NaNf ;
		x:units = "km" ;
		x:long_name = "Cross-shore distance" ;

// global attributes:
		:title = "gridlook simple fixture" ;
		:institution = "NERACOOS" ;
		:conventions = "CF-1.8" ;
}
